--- a/MPfm/MPfm.Android/Resources/Layout/Main.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/Main.axml
@@ -3,8 +3,7 @@
     android:id="@+id/main_layout"
     android:orientation="horizontal"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="#FFFFFF">
+    android:layout_height="fill_parent">
   <LinearLayout
       android:id="@+id/main_miniplayer"
       android:orientation="horizontal"
@@ -100,6 +99,7 @@
       android:id="@+id/main_pager"
       android:layout_width="fill_parent"
       android:layout_height="fill_parent"
+      android:background="@color/background"
       android:layout_above="@+id/main_miniplayer">
     <android.support.v4.view.PagerTitleStrip
           android:id="@+id/main_pager_title_strip"
