--- a/MPfm/MPfm.Android/Resources/Layout/MobileLibraryBrowserCell.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/MobileLibraryBrowserCell.axml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
-   android:layout_height="52dp"   
+   android:layout_height="52dp"
+   android:minHeight="52dp"
+   android:maxHeight="52dp"
    android:paddingLeft="8dp"
+   android:paddingRight="8dp"
    android:gravity="center_vertical"
    android:orientation="horizontal">
   <TextView
@@ -15,9 +18,12 @@
   <TextView
     android:id="@+id/mobileLibraryBrowserCell_lblTitle"
     android:layout_width="0dp"
-    android:layout_height="wrap_content"    
+    android:layout_height="fill_parent"    
     android:layout_weight="1"
     android:layout_marginLeft="8dp"
+    android:gravity="center_vertical"
+    android:ellipsize="end"
+    android:singleLine="true"
     android:textColor="#000000"
     android:textSize="18dp" />
   <LinearLayout
@@ -31,23 +37,19 @@
       android:id="@+id/mobileLibraryBrowserCell_lblTitleWithSubtitle"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
+      android:ellipsize="end"
+      android:singleLine="true"
       android:textColor="#000000"
       android:textSize="16dp" />
     <TextView
       android:id="@+id/mobileLibraryBrowserCell_lblSubtitle"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
+      android:ellipsize="end"
+      android:singleLine="true"
       android:textColor="#666666"
       android:textSize="12dp" />
   </LinearLayout>
-  <ImageView
-    android:id="@+id/mobileLibraryBrowserCell_imageNowPlaying"
-    android:layout_width="48dp"
-    android:layout_height="48dp"
-    android:layout_marginRight="6dp"    
-    android:visibility="gone"
-    android:background="@android:color/transparent"
-    android:src="@drawable/icon_speaker" />
   <ImageView
     android:id="@+id/mobileLibraryBrowserCell_imagePlay"
     android:layout_width="48dp"
@@ -72,4 +74,12 @@
     android:visibility="gone"
     android:background="@android:color/transparent"
     android:src="@drawable/icon_trash" />
+  <ImageView
+    android:id="@+id/mobileLibraryBrowserCell_imageNowPlaying"
+    android:layout_width="48dp"
+    android:layout_height="48dp"
+    android:layout_marginRight="6dp"
+    android:visibility="gone"
+    android:background="@android:color/transparent"
+    android:src="@drawable/icon_speaker" />
 </LinearLayout>
