Android: Fixed layout bugs in Equalizer Preset and Equalizer Preset Details layouts. Added list selector for all white background lists. Replaced bitmaps for checkmark and action bar save.
Related to issue #406.

--- a/MPfm/MPfm.Android/Resources/Layout/EqualizerPresetCell.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/EqualizerPresetCell.axml
@@ -2,15 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="52dp"
+   android:minHeight="52dp"
+   android:maxHeight="52dp"
    android:paddingLeft="8dp"
    android:gravity="center_vertical"
    android:orientation="horizontal">
-  <ImageView
-    android:id="@+id/equalizerPresetCell_imageEqualizer"
-    android:layout_width="48dp"
-    android:layout_height="48dp"
-    android:layout_marginRight="6dp"
-    android:src="@drawable/icon_equalizer" />
   <TextView
     android:id="@+id/equalizerPresetCell_lblName"
     android:layout_width="0dp"
@@ -18,7 +14,7 @@
     android:layout_weight="1"
     android:gravity="left"
     android:text="Default"
-    android:textColor="#000000"
+    android:textColor="@color/list_text"
     android:textSize="18dp" />
   <ImageView
     android:id="@+id/equalizerPresetCell_imageCheck"
