--- a/MPfm/MPfm.Android/Resources/Layout/EqualizerPresets.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/EqualizerPresets.axml
@@ -1,53 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/equalizerPresets_mainLayout"
-    android:orientation="vertical"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="@color/background">
+  android:id="@+id/equalizerPresets_mainLayout"
+  android:orientation="vertical"
+  android:layout_width="fill_parent"
+  android:layout_height="fill_parent"
+  android:background="@color/background">
   <LinearLayout
-      android:id="@+id/equalizerPresets_topLayout"
-      android:orientation="horizontal"
-      android:layout_width="fill_parent"
-      android:layout_height="140dp">
+    android:id="@+id/equalizerPresets_topLayout"
+    android:orientation="horizontal"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content">
     <org.sessionsapp.android.OutputMeterView
-        android:id="@+id/equalizerPresets_outputMeterView"
-        android:orientation="horizontal"
-        android:background="#000000"
-        android:layout_width="80dp"
-        android:layout_height="fill_parent">
+      android:id="@+id/equalizerPresets_outputMeterView"
+      android:orientation="horizontal"
+      android:background="#000000"
+      android:layout_width="80dp"
+      android:layout_height="fill_parent">
     </org.sessionsapp.android.OutputMeterView>
     <LinearLayout        
-        android:orientation="vertical"
-        android:layout_width="0dp"
-        android:layout_height="fill_parent"
-        android:layout_weight="1"
-        android:padding="4dp">
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      android:layout_weight="1"
+      android:orientation="vertical"
+      android:padding="12dp">
       <TextView
-          android:id="@+id/equalizerPresets_lblMasterVolume"          
-          android:layout_width="fill_parent"
-          android:layout_height="wrap_content"
-          android:layout_margin="2dp"
-          android:text="Master Volume:"
-          android:textColor="#FFFFFF" />
+        android:id="@+id/equalizerPresets_lblMasterVolume"          
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="2dp"
+        android:text="Master Volume:"
+        android:textColor="#FFFFFF" />
       <SeekBar
-          android:id="@+id/equalizerPresets_seekBarVolume"
-          android:layout_width="fill_parent"
-          android:layout_height="wrap_content"
-          android:layout_margin="2dp"
-          android:max="100" />
+        android:id="@+id/equalizerPresets_seekBarVolume"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="2dp"
+        android:max="100" />
       <TextView
-          android:id="@+id/equalizerPresets_lblBypass"          
-          android:layout_width="fill_parent"
-          android:layout_height="wrap_content"
-          android:layout_margin="2dp"
-          android:text="Equalizer Bypass:"          
-          android:textColor="#FFFFFF" />
+        android:id="@+id/equalizerPresets_lblBypass"          
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="2dp"
+        android:text="Equalizer Bypass:"          
+        android:textColor="#FFFFFF" />
       <ToggleButton
-          android:id="@+id/equalizerPresets_btnBypass"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_margin="2dp" />
+        android:id="@+id/equalizerPresets_btnBypass"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
     </LinearLayout>
   </LinearLayout>
   <ListView
@@ -59,5 +58,5 @@
     android:cacheColorHint="#333333"
     android:divider="#BBBBBB"
     android:dividerHeight="1px"
-    android:listSelector="#999999" />  
+    android:listSelector="@drawable/list_selector" />
 </LinearLayout>
