--- a/MPfm/MPfm.Android/Resources/Layout/GenericCell.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/GenericCell.axml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-   android:layout_width="fill_parent"
-   android:layout_height="52dp"
-   android:orientation="horizontal">
+  android:layout_width="fill_parent"
+  android:layout_height="52dp"
+  android:orientation="horizontal">
   <ImageView
     android:id="@+id/genericcell_image"
     android:layout_width="48dp"
@@ -10,10 +10,10 @@
     android:layout_margin="4dp"
     android:src="@drawable/icon" />
   <TextView
-      android:id="@+id/genericcell_title"
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:gravity="center_vertical"
-      android:textColor="#000000"
-      android:textSize="16dp" />
+    android:id="@+id/genericcell_title"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:gravity="center_vertical"
+    android:textColor="@color/list_text"
+    android:textSize="16dp" />
 </LinearLayout>
