--- a/MPfm/MPfm.Android/Resources/Layout/MobileLibraryBrowserCell.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/MobileLibraryBrowserCell.axml
@@ -13,7 +13,7 @@
     android:layout_width="32dp"
     android:layout_height="wrap_content"
     android:gravity="center"
-    android:textColor="#666666"
+    android:textColor="@color/list_secondarytext"
     android:textSize="18dp" />
   <TextView
     android:id="@+id/mobileLibraryBrowserCell_lblTitle"
@@ -24,7 +24,7 @@
     android:gravity="center_vertical"
     android:ellipsize="end"
     android:singleLine="true"
-    android:textColor="#000000"
+    android:textColor="@color/list_text"
     android:textSize="18dp" />
   <LinearLayout
     android:id="@+id/mobileLibraryBrowserCell_layoutSubtitle"
@@ -39,7 +39,7 @@
       android:layout_height="wrap_content"
       android:ellipsize="end"
       android:singleLine="true"
-      android:textColor="#000000"
+      android:textColor="@color/list_text"
       android:textSize="16dp" />
     <TextView
       android:id="@+id/mobileLibraryBrowserCell_lblSubtitle"
@@ -47,7 +47,7 @@
       android:layout_height="wrap_content"
       android:ellipsize="end"
       android:singleLine="true"
-      android:textColor="#666666"
+      android:textColor="@color/list_secondarytext"
       android:textSize="12dp" />
   </LinearLayout>
   <ImageView
