--- a/MPfm/MPfm.Android/Resources/Layout/Sync.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/Sync.axml
@@ -43,7 +43,7 @@
     android:cacheColorHint="#333333"
     android:divider="#BBBBBB"
     android:dividerHeight="1px"
-    android:listSelector="#CCCCCC" />
+    android:listSelector="@drawable/list_selector" />
   <Button
     android:id="@+id/sync_btnConnectManually"    
     android:layout_width="fill_parent"
