--- a/MPfm/MPfm.Android/Resources/Layout/SyncMenu.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/SyncMenu.axml
@@ -42,7 +42,7 @@
       android:cacheColorHint="#333333"
       android:divider="#BBBBBB"
       android:dividerHeight="1px"
-      android:listSelector="#CCCCCC" />
+      android:listSelector="@drawable/list_selector" />
     <LinearLayout    
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
