--- a/MPfm/MPfm.Android/Resources/Layout/SyncMenuCell.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/SyncMenuCell.axml
@@ -22,7 +22,7 @@
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:layout_weight="1"
-    android:textColor="#000000"
+    android:textColor="@color/list_text"
     android:textSize="14dp" />
   <ImageView
     android:id="@+id/syncMenuCell_checkmark"
