--- a/MPfm/MPfm.Android/Resources/Layout/SyncManualConnect.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/SyncManualConnect.axml
@@ -11,7 +11,7 @@
     android:orientation="horizontal">
     <TextView
       android:id="@+id/syncManualConnect_lblIPAddress"
-      android:layout_width="wrap_content"
+      android:layout_width="100dp"
       android:layout_height="wrap_content"
       android:gravity="center_vertical"
       android:padding="4dp"      
@@ -23,7 +23,7 @@
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_weight="1"
-      android:padding="4dp"
+      android:padding="12dp"
       android:inputType="phone"
       android:textSize="16dp"
       android:textColor="#FFFFFF" />
@@ -35,7 +35,7 @@
     android:orientation="horizontal">
     <TextView
       android:id="@+id/syncManualConnect_lblPort"
-      android:layout_width="wrap_content"
+      android:layout_width="100dp"
       android:layout_height="wrap_content"
       android:gravity="center_vertical"
       android:padding="4dp"
@@ -47,7 +47,7 @@
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_weight="1"
-      android:padding="4dp"
+      android:padding="10dp"
       android:inputType="number"
       android:hint="53551"
       android:textSize="16dp"
